added endpoints PUT/sensors and DELETE/sensors
